--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,20 +9,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +17,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#taskContainer{
+  width: 80%;
+  background-color: blue;
+  margin: auto;
+  height: 80vh;
+  display: flex;
+
+}
+
+.critical{
+  width: 20%;
+  height: 89%;
+  background-color: red;
 }
